# asm-labs

./: CMakeLists.txt  asm_lab_2.cpp  lib.asm  main.c  main.cpp  perf_measurements.cpp
lib/: CMakeLists.txt
lib/include/: count.h  vector_defs.h  vector_ops.h
lib/src/: count.asm  cum_sum.asm  own_defs.asm  simple_sum.asm  vector_ops.asm
